add search page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,13 @@ dependencies:
 
   # fonts
   google_fonts: ^6.2.1
+
+  # database
   sqflite: ^2.4.1
   path: ^1.9.0
+
+  # icons
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
