--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   # icons
   font_awesome_flutter: ^10.8.0
 
+  # tests
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,8 +85,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/todo.png
     - assets/empty.png
+    - assets/mock_avatar.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
